<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    tools:context=".MainActivity"
    android:paddingLeft="2dp"
    android:paddingRight="2dp"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true">
    <android.support.design.widget.TextInputLayout
        android:id="@+id/username_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/border"
        >

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:ems="20"
            android:hint="@string/usuario"
            android:textColor="@color/border"
            android:backgroundTint="@color/border"/>

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/border">

        <EditText
            android:id="@+id/etContrasenia"
            android:inputType="textPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:ems="20"
            android:hint="@string/contrasenia"
            android:textColor="@color/border"
            android:backgroundTint="@color/border"/>

    </android.support.design.widget.TextInputLayout>
    <Button
        android:id="@+id/btnIngresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/transparent_bg_bordered_button"
        android:text="@string/ingresar"
        android:textColor="@color/border"/>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/border" />
    <Button
        android:id="@+id/btnIngresarFB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/transparent_bg_bordered_button"
        android:text="@string/ingresarFB"
        android:textColor="@color/border"/>
    <Button
        android:id="@+id/btnRegistrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/transparent_bg_bordered_button"
        android:text="@string/registrate"
        android:textColor="@color/border"/>
</LinearLayout>
</LinearLayout>
